# gpexp

./: .gitignore  CLAUDE.md  pyproject.toml
data/: APDU.md  HelloWorldApplet.cap
docs/: adding-commands.md  scripting.md
scenarios/: create_ssd.gps  delete_applet.gps  emrtd_perso.gps  install_existing.gps  load_applet.gps  provision_ssd.gps  put_delete_key.gps  raw_get_data.gps  read_card.gps  upgrade_applet.gps
src/gpexp/: scripts.py
src/gpexp/app/: main.py
src/gpexp/app/generic/: __init__.py  cardinfo.py  runner.py  session.py
src/gpexp/app/generic/commands/: __init__.py  iso.py  session.py  state.py
src/gpexp/app/gp/: __init__.py  cardinfo.py  display.py  runner.py  scenarios.py  session.py
src/gpexp/app/gp/commands/: __init__.py  gp.py  state.py
src/gpexp/app/template/: __init__.py  cardinfo.py  runner.py  session.py
src/gpexp/app/template/commands/: __init__.py  template.py
src/gpexp/core/: __init__.py
src/gpexp/core/base/: __init__.py  agent.py  iso7816.py  message.py  tags.py  terminal.py
src/gpexp/core/generic/: __init__.py  messages.py  terminal.py
src/gpexp/core/gp/: __init__.py  capfile.py  messages.py  padding.py  protocol.py  scp02.py  scp03.py  security.py  tags.py  terminal.py
src/gpexp/core/smartcard/: __init__.py  card.py  logging.py  observer.py  tlv.py  types.py
src/gpexp/core/template/: __init__.py  messages.py  protocol.py  terminal.py
tools/: scp_debug.html  scp_debug.py  toggle-privacy.sh
