[project]
name = "gpexp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bjcolson", email = "bfcolson+git@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "click",
    "cryptography>=46.0.4",
    "pyscard>=2.3.1",
    "urwid>=3.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
gpexp = "gpexp:scripts.gpexp"
